# askey-cli

./: Cargo.toml  LICENSE  README.md  install.ps1  test.askey
.github/workflows/: release.yml
src/: converter.rs  main.rs  models.rs  parser.rs
winget/: Kalmix.Askey.installer.yaml  Kalmix.Askey.locale.en-US.yaml  Kalmix.Askey.yaml
