[package]
name = "askey"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = { version = "0.28", features = ["serde"] }
flate2 = "1.0"
anyhow = "1.0"
regex = "1.10"
ratatui = "0.30"
owo-colors = "4.3"
indicatif = "0.18"
ansi-to-tui = "8.0"
image = { version = "0.24", default-features = false, features = ["gif", "png", "jpeg", "webp"] }

